--- a/index.html
+++ b/index.html
@@ -18,28 +18,31 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h1>Topic 1</h1>
+
+				<div id="clockdiv">
+				  <div>
+				    <span class="minutes"></span>
+				    <div class="smalltext">Minutes</div>
+				  </div>
+				  <div>
+				    <span class="seconds"></span>
+				    <div class="smalltext">Seconds</div>
+				  </div>
+				</div>
+
+
+				<section> 
+					<h1>Software is eating the world</h1>
 				</section>
 				<section>
-					<h1>Topic 2</h1>
+					<h1>MERN</h1>
 				</section>
 				<section>
-					<h1>Topic 3</h1>
+					<h1>Tools</h1>
 				</section>
 
 			</div>
 
-			<div id="clockdiv">
-			  <div>
-			    <span class="minutes"></span>
-			    <div class="smalltext">Minutes</div>
-			  </div>
-			  <div>
-			    <span class="seconds"></span>
-			    <div class="smalltext">Seconds</div>
-			  </div>
-			</div>
 
 		</div>
 
