--- a/live.html
+++ b/live.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>live</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/live.css">
 </head>
 
 <body>
@@ -58,97 +58,97 @@
                 id="topic0"               
                 class="topic" 
                 topicTime=10                
-                topicTitle="Topic 0"
-                thumbnailTitle="Topic 0"
+                topicTitle="IOT"
+                thumbnailTitle="IOT"
                 thumbnailImage="assets/img/thumbnails/0.jpg"
-                contentTitle="Topic 0"
+                contentTitle="Consumer IOT"
                 contentImage="assets/img/topics/0.jpg"
                 contentVideo=""
-                footerTitle="Topic 0"
+                footerTitle="Devices Everywhere you look"
               ></div>
               <div 
                 id="topic1"               
                 class="topic" 
                 topicTime=10                
-                topicTitle="Topic 1"
-                thumbnailTitle="Topic 1"
+                topicTitle="Cloud"
+                thumbnailTitle="Cloud"
                 thumbnailImage="assets/img/thumbnails/1.jpg"
-                contentTitle="Topic 1"
+                contentTitle="Cloud Svcs"
                 contentImage="assets/img/topics/1.jpg"
                 contentVideo=""
-                footerTitle="Topic 1"
+                footerTitle="Cloud is the future"
               ></div>
               <div 
                 id="topic2"               
                 class="topic" 
                 topicTime=10                
-                topicTitle="Topic 2"
-                thumbnailTitle="Topic 2"
+                topicTitle="AI"
+                thumbnailTitle="AI"
                 thumbnailImage="assets/img/thumbnails/2.jpg"
-                contentTitle="Topic 2"
+                contentTitle="Smart Work"
                 contentImage="assets/img/topics/2.jpg"
                 contentVideo=""
-                footerTitle="Topic 2"
+                footerTitle="Automation is coming"
               ></div>
               <div 
                 id="topic3"               
                 class="topic" 
                 topicTime=10                
-                topicTitle="Topic 3"
-                thumbnailTitle="Topic 3"
+                topicTitle="Security"
+                thumbnailTitle="Sec"
                 thumbnailImage="assets/img/thumbnails/3.jpg"
-                contentTitle="Topic 3"
+                contentTitle="Cybersecurity"
                 contentImage="assets/img/topics/3.jpg"
                 contentVideo=""
-                footerTitle="Topic 3"
+                footerTitle="Ramsomware - are you ready?"
               ></div>
               <div 
                 id="topic4"               
                 class="topic" 
                 topicTime=10
-                topicTitle="Topic 4"
-                thumbnailTitle="Topic 4"
+                topicTitle="Blockchain"
+                thumbnailTitle="Crypto"
                 thumbnailImage="assets/img/thumbnails/4.jpg"
-                contentTitle="Topic 4"
+                contentTitle="Currencies"
                 contentImage="assets/img/topics/4.jpg"
                 contentVideo=""
-                footerTitle="Topic 4"
+                footerTitle="Stable coins market"
               ></div>
               <div 
                 id="topic5"
                 class="topic" 
                 topicTime=10
-                topicTitle="Topic 5"
-                thumbnailTitle="Topic 5"
+                topicTitle="Streaming"
+                thumbnailTitle="Stream"
                 thumbnailImage="assets/img/thumbnails/5.jpg"
-                contentTitle="Topic 5"
+                contentTitle="Non-stop data"
                 contentImage="assets/img/topics/5.jpg"
                 contentVideo=""
-                footerTitle="Topic 5"
+                footerTitle="The challenge of streams"
               ></div>
               <div 
                 id="topic6"               
                 class="topic" 
                 topicTime=10
-                topicTitle="Topic 6"
-                thumbnailTitle="Topic 6"
+                topicTitle="Big data"
+                thumbnailTitle="Big Data"
                 thumbnailImage="assets/img/thumbnails/6.jpg"
-                contentTitle="Topic 6"
+                contentTitle="What is big?"
                 contentImage="assets/img/topics/6.jpg"
                 contentVideo=""
-                footerTitle="Topic 6"
+                footerTitle="Data over 40 years"
               ></div>
               <div 
                 id="topic7"    
                 class="topic" 
                 topicTime=10                
-                topicTitle="Topic 7"
-                thumbnailTitle="Topic 7"
+                topicTitle="Databases"
+                thumbnailTitle="DBs"
                 thumbnailImage="assets/img/thumbnails/7.jpg"
-                contentTitle="Topic 7"
+                contentTitle="Many flavors"
                 contentImage="assets/img/topics/7.jpg"
                 contentVideo=""
-                footerTitle="Topic 7"
+                footerTitle="Database fit"
               ></div>
 
           </div>          
