--- a/live.html
+++ b/live.html
@@ -1,60 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>live</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/live.css">
+    <title>Grid</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/live.css">
 </head>
-
 <body>
 
 <div class="grid">
+    <div id="overlay"><img src="assets/img/abel_and_john.jpg"></div>
 
-    <!-- -------------------------------------------- -->
-    <!--               FULL SCREEN OVERLAY            -->
-    <!-- -------------------------------------------- -->
+    <div id="contentTitle">
+            <div id="contentTitleBox">
+                John & Abel
+            </div>
+    </div>
 
-    <div id="overlay">
-        <div>
-            Press "arrow down" key to start.<br><br>
-            <div style="font-size: 2vw;">
-                MENU:<br>
-                arrow down - start<br>
-                arrow right - next<br>    
-                arrow left - back<br>
-                space bar - green screen<br>
-                arrow up -  end, Q & A
+    <div class="content">
+        <img src="assets/img/onair.jpg" id="contentImage" class="image" />
+    </div>
+
+
+    <div class="content" style="visibility:hidden;">
+        <video controls id="contentVideo">
+            <source src="assets/video/passwords.mp4" type="video/mp4">
+        </video>
+    </div>
+
+
+    <div class="topics">
+
+        <div class="thumbnailContainer">
+            <div class="thumbnailWrapper">
+                <img id="thumbnail" src="assets/img/thumbnails/1.jpg">
+                <div id="thumbnailCaption">IOT</div>
             </div>
         </div>
-    </div>
 
+        <div id="timer">Time</div>
 
-    <!-- -------------------------------------------- -->
-    <!--               CONTENT PANE                   -->
-    <!-- -------------------------------------------- -->
-    <div class="contentTitle" id="contentTitle">
-            <div class="contentTitleBox" id="contentTitleBox">
-                Abel & John 
-            </div>
-    </div>
-    <div class="content" id="content"><img src="assets/img/start.jpg" id="contentImage" class="image" /></div>
-
-    <!-- -------------------------------------------- -->
-    <!--               TOPCS PANE                     -->
-    <!-- -------------------------------------------- -->    
-    <div class="topics" id="topics">
-
-          <img id="thumbnail" src="assets/img/thumbnails/splash.jpg">
-
-          <div class="thumbnailTitle">
-                <div class="thumbnailTitleBox" id="thumbnailTitleBox">
-                    Abel & John
-                </div>
-          </div>
-
-          <div id="timer">Time</div>
-
-          <div id="topicList">
-              <div 
+        <div id="topicList">
+            <div 
                 id="topic0"               
                 class="topic" 
                 topicTime=10                
@@ -65,8 +50,8 @@
                 contentImage="assets/img/topics/0.jpg"
                 contentVideo=""
                 footerTitle="Devices Everywhere you look"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic1"               
                 class="topic" 
                 topicTime=10                
@@ -75,10 +60,10 @@
                 thumbnailImage="assets/img/thumbnails/1.jpg"
                 contentTitle="Cloud Svcs"
                 contentImage="assets/img/topics/1.jpg"
-                contentVideo=""
+                contentVideo="assets/video/intro.mp4"
                 footerTitle="Cloud is the future"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic2"               
                 class="topic" 
                 topicTime=10                
@@ -89,8 +74,8 @@
                 contentImage="assets/img/topics/2.jpg"
                 contentVideo=""
                 footerTitle="Automation is coming"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic3"               
                 class="topic" 
                 topicTime=10                
@@ -101,8 +86,8 @@
                 contentImage="assets/img/topics/3.jpg"
                 contentVideo=""
                 footerTitle="Ramsomware - are you ready?"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic4"               
                 class="topic" 
                 topicTime=10
@@ -113,8 +98,8 @@
                 contentImage="assets/img/topics/4.jpg"
                 contentVideo=""
                 footerTitle="Stable coins market"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic5"
                 class="topic" 
                 topicTime=10
@@ -125,10 +110,8 @@
                 contentImage="assets/img/topics/5.jpg"
                 contentVideo=""
                 footerTitle="The challenge of streams"
-              ></div>
-
-<!-- 
-              <div 
+            ></div>
+            <div 
                 id="topic6"               
                 class="topic" 
                 topicTime=10
@@ -139,8 +122,8 @@
                 contentImage="assets/img/topics/6.jpg"
                 contentVideo=""
                 footerTitle="Data over 40 years"
-              ></div>
-              <div 
+            ></div>
+            <div 
                 id="topic7"    
                 class="topic" 
                 topicTime=10                
@@ -151,23 +134,15 @@
                 contentImage="assets/img/topics/7.jpg"
                 contentVideo=""
                 footerTitle="Database fit"
-              ></div>
- -->
+            ></div>
+        </div>
 
-
-          </div>
     </div>
-
-    <!-- -------------------------------------------- -->
-    <!--               FOOTER PANE                    -->
-    <!-- -------------------------------------------- -->        
-    <div class="footer">
-        <div class="topicFooter" id="topicFooter">Abel & John Live</div>        
-    </div>
+    <div class="footer"><div class="footerTitle" id="footerTitle">Footer</div></div>
 
 </div>
 
 </body>    
-<script src="assets/js/components.js"></script>
 <script src="assets/js/live.js"></script>
+
 </html>
