--- a/abel.html
+++ b/abel.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="grid">
-    <div id="overlay"><img src="assets/img/abel_and_john.jpg"></div>
+    <div id="overlay"><img src="assets/img/abel_and_john.jpg" class="overlayImage"></div>
 
     <div id="contentTitle">
             <div id="contentTitleBox">
