--- a/abel.html
+++ b/abel.html
@@ -7,7 +7,29 @@
 <body>
 
 <div class="grid">
-    <div id="overlay"><img src="assets/img/abel_and_john.jpg" class="overlayImage"></div>
+
+    <!-- ------------------------ -->
+    <!-- ---   OVERLAY PANE   --- -->
+    <!-- ------------------------ -->
+
+    <div id="overlay">
+
+        <div class="overlayImage">
+            <video controls id="overlayVideo">
+                <source src="assets/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div id="overlayImage" style="display: none;">
+            <img src="assets/img/abel_and_john.jpg" class="overlayImage">
+        </div>
+
+
+    </div>
+
+    <!-- ------------------------ -->
+    <!-- ---   CONTENT PANE   --- -->
+    <!-- ------------------------ -->
 
     <div id="contentTitle">
             <div id="contentTitleBox">
@@ -26,6 +48,9 @@
         </video>
     </div>
 
+    <!-- ----------------------- -->
+    <!-- ---   TOPICS PANE   --- -->
+    <!-- ----------------------- -->
 
     <div class="topics">
 
@@ -138,6 +163,11 @@
         </div>
 
     </div>
+
+    <!-- ----------------------- -->
+    <!-- ---   FOOTER PANE   --- -->
+    <!-- ----------------------- -->
+   
     <div class="footer"><div class="footerTitle" id="footerTitle">Footer</div></div>
 
 </div>
