--- a/john.html
+++ b/john.html
@@ -7,7 +7,30 @@
 <body>
 
 <div class="grid">
-    <div id="overlay"><img src="assets/img/abel_and_john.jpg" class="overlayImage"></div>
+
+    <!-- ------------------------ -->
+    <!-- ---   OVERLAY PANE   --- -->
+    <!-- ------------------------ -->
+
+    <div id="overlay">
+
+        <div class="overlayImage">
+            <video controls id="overlayVideo" muted="muted">
+                <source src="assets/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div id="overlayImage" style="display: none;">
+            <img src="assets/img/abel_and_john.jpg" class="overlayImage">
+        </div>
+
+
+    </div>
+
+    <!-- ------------------------ -->
+    <!-- ---   CONTENT PANE   --- -->
+    <!-- ------------------------ -->
+
 
     <div id="contentTitle">
             <div id="contentTitleBox">
@@ -21,11 +44,14 @@
 
 
     <div class="content" style="visibility:hidden;">
-        <video controls id="contentVideo">
+        <video controls id="contentVideo" muted="muted">
             <source src="assets/video/passwords.mp4" type="video/mp4">
         </video>
     </div>
 
+    <!-- ----------------------- -->
+    <!-- ---   TOPICS PANE   --- -->
+    <!-- ----------------------- -->
 
     <div class="topics">
 
@@ -138,6 +164,11 @@
         </div>
 
     </div>
+
+    <!-- ----------------------- -->
+    <!-- ---   FOOTER PANE   --- -->
+    <!-- ----------------------- -->
+
     <div class="footer"><div class="footerTitle" id="footerTitle">Footer</div></div>
 
 </div>
