--- a/live.html
+++ b/live.html
@@ -7,7 +7,29 @@
 <body>
 
 <div class="grid">
-    <div id="overlay"><img src="assets/img/abel_and_john.jpg" class="overlayImage"></div>
+
+    <!-- ------------------------ -->
+    <!-- ---   OVERLAY PANE   --- -->
+    <!-- ------------------------ -->
+
+    <div id="overlay" style="display: none;">
+
+        <div id="overlayVideo" class="overlayImage" style="display: none;">
+            <video controls>
+                <source src="assets/video/intro.mp4" type="video/mp4">
+            </video>
+        </div>
+
+        <div id="overlayImage" style="display: none;">
+            <img src="assets/img/abel_and_john.jpg" class="overlayImage">
+        </div>
+
+
+    </div>
+
+    <!-- ------------------------ -->
+    <!-- ---   CONTENT PANE   --- -->
+    <!-- ------------------------ -->
 
     <div id="contentTitle">
             <div id="contentTitleBox">
@@ -19,13 +41,15 @@
         <img src="assets/img/onair.jpg" id="contentImage" class="image" />
     </div>
 
-
     <div class="content" style="visibility:hidden;">
         <video controls id="contentVideo">
             <source src="assets/video/passwords.mp4" type="video/mp4">
         </video>
     </div>
 
+    <!-- ----------------------- -->
+    <!-- ---   TOPICS PANE   --- -->
+    <!-- ----------------------- -->
 
     <div class="topics">
 
@@ -138,6 +162,11 @@
         </div>
 
     </div>
+
+    <!-- ----------------------- -->
+    <!-- ---   FOOTER PANE   --- -->
+    <!-- ----------------------- -->
+
     <div class="footer"><div class="footerTitle" id="footerTitle">Footer</div></div>
 
 </div>
